--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,1 +1,14 @@
+@import "abstracts/mixins";
+@import "abstracts/variables";
+
 @import "base/base";
+@import "base/typography";
+
+@import "components/button";
+@import "components/card";
+
+@import "layout/footer";
+@import "layout/header";
+@import "layout/navigation";
+
+@import "pages/home";
