--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -2,7 +2,7 @@
 
     position: fixed;
     width: 100%;
-    background-color: map-get($color-secondary, "color-700");
+    // background-color: map-get($color-secondary, "color-700");
     display: flex;
 
     &__logo-box {
