--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,9 +1,5 @@
-// * Font size
 $default-font-size: 16px;
 
-// * COLORS
-
-//
 $color-primary-dark: #FFDA6A;
 $color-primary-medium: #CC9A06;
 $color-primary-light: #664D03;
@@ -17,3 +13,8 @@ $color-secondary: ("color-100": #F8F9FA,
     "color-700": #343A40,
     "color-800": #343A40,
     "color-900": #212529);
+
+$color-white: #fff;
+$color-black: #000;
+
+$btn-height: 10rem;
