add html for section services, update button styles

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,8 +1,8 @@
 $default-font-size: 16px;
 
-$color-primary-dark: #FFDA6A;
+$color-primary-light: #FFDA6A;
 $color-primary-medium: #CC9A06;
-$color-primary-light: #664D03;
+$color-primary-dark: #664D03;
 
 $color-secondary: ("color-100": #F8F9FA,
     "color-200": #E9ECEF,
