--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -8,18 +8,19 @@
         width: 30rem;
         // height: $btn-height;
         line-height: $btn-height;
-        font-size: 3rem;
+        font-size: 2.5rem;
         border-radius: 1rem;
         text-align: center;
         text-decoration: none;
         text-transform: uppercase;
+        font-weight: 600;
 
     }
 
     &--primary {
 
         color: $color-white;
-        background-color: $color-primary-medium;
+        background-color: darken($color-primary-light, 15%);
 
     }
 
