--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -3,3 +3,75 @@
     margin: auto;
 
 }
+
+.u-margin-vertical-big {
+
+    margin: 8rem 0;
+
+}
+
+.u-margin-vertical-medium {
+
+    margin: 4rem 0;
+
+}
+
+.u-margin-vertical-small {
+
+    margin: 2rem 0;
+
+}
+
+.u-padding-vertical-big {
+
+    padding: 8rem 0;
+
+}
+
+.u-padding-vertical-medium {
+
+    padding: 4rem 0;
+
+}
+
+.u-padding-vertical-small {
+
+    padding: 2rem 0;
+
+}
+
+.u-margin-bottom-big {
+
+    margin-bottom: 8rem;
+
+}
+
+.u-margin-bottom-medium {
+
+    margin-bottom: 4rem;
+
+}
+
+.u-margin-bottom-small {
+
+    margin-bottom: 2rem;
+
+}
+
+.u-padding-bottom-big {
+
+    padding-bottom: 8rem;
+
+}
+
+.u-padding-bottom-medium {
+
+    padding-bottom: 4rem;
+
+}
+
+.u-padding-bottom-small {
+
+    padding-bottom: 2rem;
+
+}
