--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -2,7 +2,6 @@
 
     text-align: center;
     flex-basis: 30%;
-    justify-content: space-between;
 
     &__icon-box {
 
@@ -25,6 +24,27 @@
         border-radius: 50%;
         font-size: 4.5rem;
         color: darken($color-primary-light, 15%);
+
+    }
+
+    &__img-box {
+
+        width: 100%;
+        height: 40rem;
+
+    }
+
+    &__img {
+
+        height: 100%;
+        width: 100%;
+        object-fit: cover;
+
+    }
+
+    &--portfolio {
+
+        background-color: map-get($color-secondary, "color-100");
 
     }
 
