--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -2,8 +2,8 @@
 
     position: fixed;
     width: 100%;
-    // background-color: map-get($color-secondary, "color-700");
     display: flex;
+    transition: all .4s ease;
 
     &__logo-box {
 
@@ -59,6 +59,12 @@
         text-decoration: none;
         text-transform: uppercase;
         font-size: $default-font-size;
+
+    }
+
+    &--scrolled {
+
+        background-color: map-get($color-secondary, "color-700");
 
     }
 }
