Add menu hamburger for medium screen, add mixin breakpoint, update scss files

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -18,3 +18,9 @@ $color-white: #fff;
 $color-black: #000;
 
 $btn-height: 10rem;
+
+$menu-side-height: 5rem;
+$menu-side-width: 7rem;
+
+
+$menu-icon-height: .5rem;
