--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -1,70 +1,125 @@
 .navigation {
-
     position: fixed;
     width: 100%;
     display: flex;
     transition: all .4s ease;
+    padding: 2rem;
 
     &__logo-box {
-
         flex-basis: 30%;
         display: flex;
         font-size: $default-font-size;
         color: $color-primary-medium;
-
     }
 
     &__logo {
-
         margin: auto;
         width: 50%;
-
     }
 
     &__logo-text {
-
         font-family: 'Berkshire Swash', cursive;
         font-size: 3.5rem;
-
     }
 
     &__list-box {
-
         flex-basis: 70%;
 
+        @include breakpoint(medium) {
+            display: none;
+        }
     }
 
     &__list-item {
-
         min-width: 100%;
         list-style: none;
         display: flex;
         justify-content: space-around;
-
     }
 
     &__item {
-
         flex-basis: 18%;
         text-align: center;
         cursor: pointer;
-
     }
 
     &__link {
-
         display: inline-block;
         padding: 3rem 0;
         color: map-get($color-secondary, "color-100");
         text-decoration: none;
         text-transform: uppercase;
         font-size: $default-font-size;
+    }
 
+    &__menu-box {
+        display: none;
+        width: $menu-side-width;
+        height: $menu-side-height;
+        margin-left: auto;
+
+        @include breakpoint(medium) {
+            display: block;
+        }
+    }
+
+    &__menu {
+        width: 100%;
+        height: 100%;
+        position: relative;
+        overflow: hidden;
+    }
+
+    &__icon {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 100%;
+        height: $menu-icon-height;
+        background-color: white;
+        transition: all .3s ease;
+
+        &::before,
+        &::after {
+            content: "";
+            display: block;
+            position: absolute;
+            // transform-origin: center left;
+            width: 100%;
+            height: 100%;
+            background-color: white;
+            transition: all .3s ease;
+        }
+
+        &::before {
+            bottom: calc(#{$menu-side-height} / 2 - #{$menu-icon-height} / 2);
+            left: 0;
+        }
+
+        &::after {
+            top: calc(#{$menu-side-height} / 2 - #{$menu-icon-height} / 2);
+            left: 0;
+        }
+    }
+
+    &__menu--active>&__icon {
+        left: 150%;
+
+        &::before {
+            transform: rotate(45deg);
+            bottom: 0;
+            left: -100%;
+        }
+
+        &::after {
+            transform: rotate(-45deg);
+            top: 0;
+            left: -100%;
+        }
     }
 
     &--scrolled {
-
         background-color: map-get($color-secondary, "color-700");
-
     }
 }
