--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -10,6 +10,7 @@
         border-radius: 50%;
         text-align: center;
         position: relative;
+        z-index: 2;
     }
 
     &__icon {
